[gd_scene load_steps=9 format=3 uid="uid://diw4mtbdis572"]

[ext_resource type="Script" path="res://src/AnswerPopups/WrongAnswerPopup/WrongAnswerPopup.gd" id="1_cba6y"]
[ext_resource type="Texture2D" uid="uid://bqfhb1tc7n4m2" path="res://assets/icons/sad.png" id="2_i05ho"]
[ext_resource type="Texture2D" uid="uid://g3ah7qq8kq6" path="res://assets/icons/colon.png" id="3_3qkoh"]
[ext_resource type="Texture2D" uid="uid://bwvr0mnnix15t" path="res://assets/icons/equal.png" id="3_bvnfu"]
[ext_resource type="Texture2D" uid="uid://dmxj5a3fcx4gi" path="res://assets/icons/record-button.png" id="3_m6nl4"]

[sub_resource type="Animation" id="Animation_bkmpo"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Pivot/Face:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-52, 187)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Pivot/Face:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0.729385, 0.741471, 0.7283, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Pivot/Label:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Pivot/Label:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-136, 74)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("ColorRect:color")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0, 0, 0, 0)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Pivot/Panel/ContinueBtn:modulate")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("Pivot/Panel/ContinueBtn:visible")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_a88df"]
resource_name = "fade_in"
length = 1.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Pivot/Face:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.3, 0.4, 0.5, 0.6, 0.666667, 0.833333),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(-54, 365), Vector2(-52, 187), Vector2(-52, 187), Vector2(-3, 187), Vector2(-130, 187), Vector2(-57, 187), Vector2(-57, 187), Vector2(-57, 375)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Pivot/Face:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.133333),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0.729412, 0.741176, 0.729412, 0), Color(0.729385, 0.741471, 0.7283, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Pivot/Label:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.233333, 0.433333),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Pivot/Label:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-111, -277)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("ColorRect:color")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.233333),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 0), Color(0, 0, 0, 0.709804)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Pivot/Panel/ContinueBtn:modulate")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 1, 1.26667),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("Pivot/Panel/ContinueBtn:visible")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0, 0.7, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [false, false, true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_64tkj"]
_data = {
"RESET": SubResource("Animation_bkmpo"),
"fade_in": SubResource("Animation_a88df")
}

[node name="WrongAnswerPopup" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_cba6y")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0)

[node name="Pivot" type="Control" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2

[node name="Face" type="TextureRect" parent="Pivot"]
modulate = Color(0.729385, 0.741471, 0.7283, 1)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -52.0
offset_top = 187.0
offset_right = 48.0
offset_bottom = 287.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(50, 50)
texture = ExtResource("2_i05ho")
expand_mode = 1
stretch_mode = 5

[node name="Label" type="Label" parent="Pivot"]
modulate = Color(1, 1, 1, 0)
layout_mode = 0
offset_left = -136.0
offset_top = 74.0
offset_right = 127.0
offset_bottom = 155.0
theme_override_font_sizes/font_size = 70
text = "Niestety..."

[node name="Panel" type="Panel" parent="Pivot"]
layout_mode = 0
offset_left = -212.0
offset_top = -98.0
offset_right = 207.0
offset_bottom = 78.0

[node name="Label2" type="Label" parent="Pivot/Panel"]
layout_mode = 0
offset_left = 41.0
offset_top = 27.0
offset_right = 403.0
offset_bottom = 108.0
theme_override_font_sizes/font_size = 36
text = "Poprawna odpowied≈∫:"

[node name="HBoxContainer" type="HBoxContainer" parent="Pivot/Panel/Label2"]
layout_mode = 0
offset_left = -34.0
offset_top = 67.0
offset_right = 366.0
offset_bottom = 131.0
theme_override_constants/separation = 10
alignment = 1

[node name="CorrectA" type="Label" parent="Pivot/Panel/Label2/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 52
text = "i"

[node name="MultiplySign" type="TextureRect" parent="Pivot/Panel/Label2/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(12, 0)
layout_mode = 2
texture = ExtResource("3_m6nl4")
expand_mode = 1
stretch_mode = 5

[node name="DivideSign" type="TextureRect" parent="Pivot/Panel/Label2/HBoxContainer"]
unique_name_in_owner = true
visible = false
custom_minimum_size = Vector2(40, 0)
layout_mode = 2
texture = ExtResource("3_3qkoh")
expand_mode = 1
stretch_mode = 5

[node name="CorrectB" type="Label" parent="Pivot/Panel/Label2/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 52
text = "i"

[node name="EqSign" type="TextureRect" parent="Pivot/Panel/Label2/HBoxContainer"]
custom_minimum_size = Vector2(20, 0)
layout_mode = 2
texture = ExtResource("3_bvnfu")
expand_mode = 1
stretch_mode = 5

[node name="CorrectResult" type="Label" parent="Pivot/Panel/Label2/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 52
text = "-1"

[node name="ContinueBtn" type="Button" parent="Pivot/Panel"]
unique_name_in_owner = true
visible = false
layout_mode = 0
offset_left = 158.0
offset_top = 192.0
offset_right = 258.0
offset_bottom = 237.0
mouse_default_cursor_shape = 2
theme_override_font_sizes/font_size = 30
text = "Dalej"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_64tkj")
}
